# shacl-api

./: .env.dist  .example.env  .gitignore  CHANGELOG  Dockerfile  Makefile  README.md  docker-compose.yml  index.yaml  justfile  pyproject.toml
.docker/: Dockerfile  api.Dockerfile  compose.yml  entrypoint.sh
.github/workflows/: helm-charts.yaml
app/: entrypoint.sh  main.py  shapesfile.ttl  shapesfiles.ttl
app/webapp/: main.py
bench/: SPAQLrequests.ipynb  SPARQLConstructor.ipynb  example.json  jsonld-ttl.ipynb  requests.ipynb
ci/: develop_watcher.sh  prod_watcher.sh
examples/data/: example.ttl
examples/notebooks/: requests.ipynb
examples/requests/: client.py  client.sh  requests.py
src/shacl-api/: main.py  server.py  shapesfile.ttl  webapp.py
src/shacl_api/: io.py  mimetypes.py  run.py  server.py  webapp.py
tests/: inference.py  test_server.py  validation.py
tests/data/: inf_ok_data.ttl  inf_ok_report.ttl  val_ok_report.ttl
tests/data/input/: val_ImagingOntologyShapes.ttl
tests/output-files/: validationFailTest.ttl
tests/tests-files/: inf_ImagingOntologyShapes.ttl  val_imagingID.ttl
tools/: README.md
tools/deploy/: README.md  common.lib.star  deployment.yaml  schema.yaml  service.yaml
tools/deploy/k8s/: deployment.yaml
tools/docker/: Dockerfile  compose.yml  entrypoint.sh
tools/helm/: Chart.yaml
tools/helm/templates/: shacl-api-deployment.yaml
tools/image/: Dockerfile  compose.yml  entrypoint.sh
tools/just/: docker.just  image.just  manifests.just
tools/k8s/: Chart.yaml  values.yaml
tools/k8s/templates/: shacl-api-deployment.yaml  shacl_api-service.yaml
tools/nix/: flake.nix
