[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shacl-api"
authors = [
  { name="Swiss Data Science Center", email="contact@datascience.ch" },
]
description = "Web service for the TopBraid SHACL validator."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

dependencies = [
  "fastapi",
  "python-multipart",
  "rdflib",
  "uvicorn",
]

[project.urls]
Homepage = "https://github.com/sdsc-ordes/shacl-api"
Issues = "https://github.com/sdsc-ordes/shacl-api/issues"

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
]
test = [
    "pytest",
]
webapp = [
  "streamlit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shacl-api"]

[tool.hatch.version]
path = "src/shacl-api/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'
